css/styles.css
/* ... */
.card_body_pop {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-left: 20px;
    margin-top: 10px;
}

.card_pop_text .card_price {
    margin: 0px;
}

.card_rating_pop {
    color: rgb(217, 217, 217);
    margin-bottom: 5px;
}

.card_rating_pop span {
    margin-left: -3px;
}

.card_pop:hover .card_image_pop img {
    width: 100%;
    height: 100%;
}

.card_pop:hover .card_title {
    color: rgb(0, 101, 252);
}


/* Activités */

#activites h2 {
    margin: 50px 50px 30px;
}

#card_group_act {
    display: flex;
    justify-content: flex-start;
    margin: 0px 25px;
    flex-wrap: wrap;
}

.card_act a {
    color: rgb(0, 0, 0);
    font-size: 150px;
    display: flex;
    flex-direction: column-reverse;
    justify-content: space-between;

    border-radius: 25px;
    box-shadow: 0px 6px 20px -10px rgb(200, 200, 200);
    width: 400px;
    height: 250px;
    margin: 20px;
    overflow: hidden;
}

.card_act_tall:hover .card_act_image_tall img {
    width: 100%;
    height: 100%;
}

.card_act:hover .card_act_image img {
    height: 100%;
    width: 100%;
}

.card_act_tall a {
    display: flex;
    flex-direction: column-reverse;
    justify-content: space-between;
    font-size: 25px;
    border-radius: 25px;
    box-shadow: 0px 6px 20px -10px rgb(200, 200, 200);
    background-color: rgb(255, 255, 255);
    width: 400px;
    height: 600px;
    margin: 20px;
}

.card_act_image {
    position: relative;
    overflow: hidden;
    height: 100%;
    border-top-left-radius: 25px;
    border-top-right-radius: 25px;
}

.card_act_image_tall {
    position: relative;
    overflow: hidden;
    height: 100%;
    border-top-left-radius: 25px;
    border-top-right-radius: 25px;
}

.card_act_image img {
    position: absolute;
    height: 130%;
    width: 130%;
    object-fit: cover;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    transition-duration: .2s;
    transition-timing-function: ease-in-out;
    object-fit: cover;
}

.card_act_image_tall img {
    position: absolute;
    height: 130%;
    width: 130%;
    object-fit: cover;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    transition-duration: .2s;
    transition-timing-function: ease-in-out;
}

.card_act_title {
    font-size: 25px;
    font-weight: bold;
    margin: 25px 20px 25px;

}

.card_act img {
    width: 120%;
    height: 210px;
}

#card_pair_1 {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    max-height: 640px;
}

#card_pair_2 {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    max-height: 640px;
}


#card_pair_1 .card_act:nth-child(1) {
    background-color: rgb(255, 255, 255);
    min-height: 300px;
    margin-bottom: 40px;
}

#card_pair_1 .card_act:nth-child(2) {
    background-color: rgb(255, 255, 255);
    min-height: 240px;
}



#card_pair_2 .card_act:nth-child(1) {
    background-color: rgb(255, 255, 255);
    min-height: 275px;
    margin-bottom: 40px;
}

#card_pair_2 .card_act:nth-child(2) {
    background-color: rgb(255, 255, 255);
    min-height: 265px;
}

/* Footer */

footer {
    height: 200px;
    background-color: rgb(242, 242, 242);
    display: flex;
    margin-top: 50px;
}

.bloc_footer {
    width: 30%;
    margin-left: 3%;
}

/*--------------------------------------------------------------------------------------------*/
/*--------------------------------------------------------------------------------------------*/
/*--------------------------------------------------------------------------------------------*/
/*--------------------------------------------------------------------------------------------*/
/*--------------------------------------------------------------------------------------------*/
/*--------------------------------------------------------------------------------------------*/
/*--------------------------------------------------------------------------------------------*/
/*--------------------------------------------------------------------------------------------*/
/*--------------------------------------------------------------------------------------------*/
/*--------------------------------------------

@media only screen and (max-width: 320px){
}

@media only screen (min-width: 321px) and (max-width: 799px){
}

@media only screen and (min-width: 800px) and (max-width: 966px){
}

@media only screen and (min-width: 967px) and (max-width: 1024px){
}

------------------------------------------------*/

/*------------- Responsive -----------------*/

@media only screen and (min-width:993px) and (max-width:1024px) {}


@media only screen and (max-width: 1500px) {}
/* ... */

